1. Fixing issue with break in file creation api.
git-svn-id: http://svn.blueriver.com/mura/trunk/www@4366 50f7a5e4-a141-4b55-9860-49daa24b3293

--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -179,7 +179,7 @@ input.text, input.textAlt, input.date {
 }
 
 input.text {
-	margin: -3px 2px 0 0;
+	margin: 0 2px 0 0;
 	width: 300px;
 	vertical-align: middle;
 	background-color: #fff;
